<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    tools:context=".InputActivity"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="460dp"
            android:orientation="vertical" >
            
    <!-- name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.73"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- birth date -->
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBirthDate"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.76"
            android:onClick="btnBirthDate_onClick"
            android:text="@string/btnBirthDate" />
    </LinearLayout>

    <!-- sex -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwSex"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwSex"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnSex"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="2dp"> 
            </Spinner>
    </LinearLayout>

    <!-- position -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwPosition"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwPosition"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:inputType="textPostalAddress|textCapSentences"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- salary -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwSalary"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwSalary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:inputType="number"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwPhone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwPhone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:inputType="phone"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- e-mail -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvwEmail"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tvwEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- sending -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSend"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.76"
            android:onClick="btnSend_onClick"
            android:text="@string/btnSend" />
    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
